--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "vue": "^3.4.0",
-        "vue-router": "^4.2.5",
+        "@element-plus/icons-vue": "^2.3.2",
+        "axios": "^1.6.2",
+        "element-plus": "^2.12.0",
         "pinia": "^2.1.7",
-        "axios": "^1.6.2"
+        "vue": "^3.4.0",
+        "vue-router": "^4.2.5"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^4.5.2",
+        "unplugin-auto-import": "^20.3.0",
+        "unplugin-vue-components": "^30.0.0",
         "vite": "^5.0.8"
     }
 }
