--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.3.2",
+        "@tailwindcss/vite": "^4.1.17",
         "axios": "^1.6.2",
         "element-plus": "^2.12.0",
         "pinia": "^2.1.7",
+        "tailwindcss": "^4.1.17",
         "vue": "^3.4.0",
         "vue-router": "^4.2.5"
     },
