--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-    "name": "diet-recommendation-client",
-    "version": "1.0.0",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "@element-plus/icons-vue": "^2.3.2",
-        "@tailwindcss/vite": "^4.1.17",
-        "axios": "^1.6.2",
-        "element-plus": "^2.12.0",
-        "pinia": "^2.1.7",
-        "tailwindcss": "^4.1.17",
-        "vue": "^3.4.0",
-        "vue-router": "^4.2.5"
-    },
-    "devDependencies": {
-        "@vitejs/plugin-vue": "^4.5.2",
-        "unplugin-auto-import": "^20.3.0",
-        "unplugin-vue-components": "^30.0.0",
-        "vite": "^5.0.8"
-    }
+  "name": "diet-recommendation-client",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.{js,vue,ts,css,scss,less,json}\"",
+    "format:check": "prettier --check \"src/**/*.{js,vue,ts,css,scss,less,json}\"",
+    "format:all": "prettier --write ."
+  },
+  "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
+    "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.6.2",
+    "element-plus": "^2.12.0",
+    "pinia": "^2.1.7",
+    "tailwindcss": "^4.1.17",
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.5"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.5.2",
+    "prettier": "^3.7.4",
+    "unplugin-auto-import": "^20.3.0",
+    "unplugin-vue-components": "^30.0.0",
+    "vite": "^5.0.8"
+  }
 }
