重新提交代码部署到 Netlify

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,10 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
+
+# 环境变量文件
+.env.local
+.env.*.local
 
 # Editor directories and files
 .vscode/*
