--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --mode development",
+    "build": "vite build --mode production",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,vue,ts,css,scss,less,json}\"",
     "format:check": "prettier --check \"src/**/*.{js,vue,ts,css,scss,less,json}\"",
