--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # 前端环境变量
-VITE_API_BASE_URL=https://lyn-backend-165954-5-1362504576.sh.run.tcloudbase.com/api
+VITE_API_BASE_URL=http://localhost:3000
+# VITE_API_BASE_URL=https://lyn-backend-165954-5-1362504576.sh.run.tcloudbase.com/api
